# hackaton

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  config.py  example.env  main.py  pyproject.toml
backend/src/auth/: auth.py
backend/src/database/: crud.py  db_settings.py  models.py
backend/src/database/schemas/: category.py  transaction.py  user.py
backend/src/routes/: auth.py  category.py  transaction.py
frontend/: Dockerfile  package-lock.json
frontend/src/components/: AddFin.vue  AllFin.vue  HelloWorld.vue  SidebarComponent.vue  StatisticComponent.vue
frontend/src/router/: index.js
src/: App.vue
src/components/: AddFin.vue  AllFin.vue  HelloWorld.vue  SidebarComponent.vue  StatisticComponent.vue
src/router/: index.js
