[tool.poetry]
name = "hakatonapp"
version = "0.1.0"
description = ""
authors = ["Artyom, BulkEdit"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
pydantic = "^2.10.2"
bcrypt = "4.0.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
